[gd_scene load_steps=4 format=3 uid="uid://4xnn1i0obpqj"]

[ext_resource type="Script" path="res://Scripts/boss_laser.gd" id="1_6ts8j"]
[ext_resource type="Texture2D" uid="uid://bkcenoo8abouj" path="res://Assets/Game Assets/Boss Laser.png" id="1_f1g41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3n31t"]
size = Vector2(61, 204)

[node name="Boss_Laser" type="Area2D"]
collision_layer = 256
collision_mask = 17
script = ExtResource("1_6ts8j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f1g41")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_3n31t")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -139)
scale = Vector2(3.8, 1)

[connection signal="area_entered" from="." to="." method="_on_shield_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
